--- a/httpserver/app/Dockerfile
+++ b/httpserver/app/Dockerfile
@@ -1,15 +1,8 @@
-# Установка базового образа
 FROM nginx:latest
 
-# Копирование контента в приложение
-COPY . /usr/share/nginx/html
+COPY app.conf /etc/nginx/conf.d/default.conf
 
-# Установка порта
 EXPOSE 80
 
-# Основная команда
 CMD ["nginx", "-g", "daemon off;"]
 
-FROM base-image
-
-COPY app/app.conf /path/to/app.conf
